--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "@types/jest": "^29.5.14",
     "axios": "^1.9.0",
     "jest": "^29.7.0"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^9.7.0"
   }
 }
